Closed
Bug 1402704
Opened 8 years ago
Closed 8 years ago
Crash in OOM | large | NS_ABORT_OOM | nsTArray_base<T>::EnsureCapacity<T> | mozilla::layers::ScrollMetadata::ScrollMetadata
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla58
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | --- | fixed |
People
(Reporter: jseward, Assigned: kats)
References
Details
(Keywords: crash, Whiteboard: [wr-mvp])
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-d4e65ff0-6962-415d-8c20-5d85c0170922.
=============================================================
This is topcrash #14 in the Android nightly 20170921100140.
| Reporter | ||
Updated•8 years ago
|
Flags: needinfo?(bugmail)
| Assignee | ||
Comment 1•8 years ago
|
||
Somebody has enabled webrender on Android where it's not supported at all. Not surprising that they are crashing. We should block it from being enabled there.
Assignee: nobody → bugmail
Flags: needinfo?(bugmail)
| Comment hidden (mozreview-request) |
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8911812 [details]
Bug 1402704 - Ensure WebRender cannot be enabled on Android.
https://reviewboard.mozilla.org/r/183240/#review188396
Attachment #8911812 -
Flags: review?(jmuizelaar) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5b793946076c
Ensure WebRender cannot be enabled on Android. r=jrmuizel
Updated•8 years ago
|
Blocks: stage-wr-trains
status-firefox57:
--- → unaffected
Updated•8 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [wr-mvp]
Comment 5•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox58:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Updated•8 years ago
|
status-firefox55:
--- → unaffected
status-firefox56:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•