Bug 1402704 - Ensure WebRender cannot be enabled on Android. r=jrmuizel

MozReview-Commit-ID: AMZ3niupnJ8